k8s/discord-bot/service.yml
apiVersion: v1
kind: Service
metadata:
  name: cityflow-discord-bot
  namespace: cityflow
  labels:
    app.kubernetes.io/name: discord-bot
    app.kubernetes.io/part-of: cityflow
spec:
  selector:
    app.kubernetes.io/name: discord-bot
  ports:
    - name: api
      port: 5001
      targetPort: api
      protocol: TCP
